# AstraForge

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: agent-runtime.md  architecture.md  build-instructions.md  database-design.md  setup.md
scripts/: build.ps1  install-deps.ps1  setup.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/agent/: commands.rs  mod.rs  runtime.rs  tools.rs  types.rs
src-tauri/src/ai/: commands.rs  gateway.rs  mod.rs  models.rs  streaming.rs
src-tauri/src/ai/providers/: mod.rs  nvidia.rs  ollama.rs  openai_compat.rs
src-tauri/src/checkpoint/: commands.rs
src-tauri/src/database/: connection.rs  mod.rs  schema.rs
src-tauri/src/fs/: commands.rs  watcher.rs
src-tauri/src/git/: commands.rs  mod.rs
src-tauri/src/healing/: commands.rs  engine.rs
src-tauri/src/mcp/: client.rs  commands.rs  mod.rs  registry.rs
src-tauri/src/memory/: commands.rs
src-tauri/src/rag/: commands.rs  indexer.rs  mod.rs  retriever.rs
src-tauri/src/review/: analyzer.rs  commands.rs  mod.rs
src-tauri/src/settings/: commands.rs
src-tauri/src/terminal/: commands.rs  mod.rs
src/hooks/: use-keyboard-shortcuts.ts  use-toast.ts
src/lib/: tauri.ts  utils.ts
src/stores/: chat.ts  editor.ts  git.ts  models.ts  (+3 more)
(+26 files in other folders)
