[package]
name = "astraforge"
version = "0.1.0"
edition = "2021"
description = "AstraForge - AI-Powered Development Environment"

[lib]
name = "astraforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = "0.19"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
notify = { version = "7", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
regex = "1"
open = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
